--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,49 +30,20 @@ jobs:
     - name: Run linting
       run: npm run lint
       
+    - name: Run typecheck
+      run: npm run typecheck
+      
     - name: Run tests
       run: npm test
       
     - name: Build CLI
       run: npm run build
       
-    - name: Test CLI functionality
+    - name: Test CLI basic functionality
       run: |
         # Test basic CLI functionality
         node dist/cli.js --version
         node dist/cli.js --help
-        
-        # Test validation with fixtures
-        node dist/cli.js validate tests/fixtures/valid-agents/basic-agent.json --schema-only
-        
-        # Test JSON output
-        node dist/cli.js validate tests/fixtures/valid-agents/basic-agent.json --schema-only --json | jq .
-
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Build for production
-      run: npm run build
-      
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: cli-build
-        path: dist/
 
   security:
     runs-on: ubuntu-latest
@@ -92,6 +63,3 @@ jobs:
       
     - name: Run security audit
       run: npm audit --audit-level moderate
-      
-    - name: Check for vulnerabilities
-      run: npm audit --audit-level high
