--- a/package.json
+++ b/package.json
@@ -64,10 +64,11 @@
     "@types/node": "^20.8.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/coverage-v8": "^1.6.0",
     "eslint": "^8.57.1",
     "tsup": "^8.5.0",
     "typescript": "^5.2.2",
-    "vitest": "^3.2.4"
+    "vite": "^5.4.8",
+    "vitest": "^1.6.0"
   }
 }
