--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,18 +40,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js 20.x
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20.x'
         cache: 'npm'
         
     - name: Install dependencies
@@ -60,9 +56,21 @@ jobs:
     - name: Build CLI
       run: npm run build
       
-    - name: Test CLI basic functionality
+    - name: Test CLI basic functionality (Node.js 20.x)
       run: |
         # Test basic CLI functionality
+        node dist/cli.js --version
+        node dist/cli.js --help
+        
+    - name: Test CLI with Node.js 18.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18.x'
+        cache: 'npm'
+        
+    - name: Test CLI basic functionality (Node.js 18.x)
+      run: |
+        # Test basic CLI functionality on Node.js 18.x
         node dist/cli.js --version
         node dist/cli.js --help
 
