feat: implement automated release workflow with GitHub Releases
 New Release Strategy:
- Replace manual tag-based releases with GitHub Release automation
- Add version bump workflow for easier release management
- Include NPM provenance for enhanced security
- Add manual workflow dispatch for emergency releases

 New Workflow Process:
1. Run 'Version Bump' workflow  Creates PR with version update
2. Merge PR  Manually create GitHub Release
3. GitHub Release  Automatically publishes to NPM

 Security Improvements:
- No local NPM token handling required
- Provenance attestation for NPM packages
- Full audit trail through GitHub Releases
- Consistent build environment

This eliminates the need for manual local publishing while maintaining
full control over when releases happen.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,22 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  release:
+    types: [published]
+  # Also support manual workflow dispatch for emergency releases
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to release (e.g., 1.0.1)'
+        required: true
+        type: string
 
 jobs:
-  create-release:
+  publish:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-      packages: write
+      contents: read
+      id-token: write  # For NPM provenance
       
     steps:
     - name: Checkout code
@@ -26,23 +32,28 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Run linting
+      run: npm run lint
+      
+    - name: Run typecheck
+      run: npm run typecheck
+      
     - name: Run tests
       run: npm test
       
     - name: Build CLI
       run: npm run build
       
-    - name: Create GitHub Release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
+    - name: Test CLI functionality
+      run: |
+        node dist/cli.js --version
+        node dist/cli.js --help
+        
+    - name: Update version (if manual dispatch)
+      if: github.event_name == 'workflow_dispatch'
+      run: npm version ${{ github.event.inputs.version }} --no-git-tag-version
         
     - name: Publish to NPM
-      run: npm publish
+      run: npm publish --provenance
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
