--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,6 @@ jobs:
       run: npm version ${{ github.event.inputs.version }} --no-git-tag-version
         
     - name: Publish to NPM
-      run: npm publish --provenance
+      run: npm publish --access public --provenance
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
