security: add explicit permissions to workflows
- Add minimal required permissions to all workflows
- release-binaries.yml: contents:write (for uploads) + actions:read
- test-binaries.yml: contents:read + actions:read only
- Follow principle of least privilege for security hardening

No functionality changes - pure security improvement.

--- a/.github/workflows/test-binaries.yml
+++ b/.github/workflows/test-binaries.yml
@@ -8,6 +8,11 @@ on:
         type: boolean
         default: false
 
+# Minimal permissions for testing
+permissions:
+  contents: read
+  actions: read
+
 jobs:
   test-cross-platform:
     name: Test ${{ matrix.platform }} Binary
