--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -10,6 +10,11 @@ on:
         required: true
         default: 'v1.1.0'
 
+# Explicit permissions for security
+permissions:
+  contents: write  # Needed to upload release assets
+  actions: read
+
 jobs:
   build-binaries:
     name: Build ${{ matrix.platform }} Binary
