feat: add ARM64 support for Apple Silicon and Windows ARM
- Add macOS ARM64 binary (capiscio-darwin-arm64) for Apple Silicon Macs
- Add Windows ARM64 binary (capiscio-win-arm64.exe) for ARM Windows devices
- Update GitHub Actions workflows to build all 5 platform variants
- Add macOS code signing step for distribution compliance
- Update README with specific download instructions for each architecture

Binaries now available:
- Linux x64: 49.5MB
- macOS Intel: 53.5MB
- macOS ARM64: 47.6MB (Apple Silicon M1/M2/M3)
- Windows Intel: 41.1MB
- Windows ARM64: 28.5MB

All binaries tested and working correctly.

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -32,10 +32,20 @@ jobs:
             target: node18-macos-x64
             binary_name: capiscio-darwin-x64
             
+          - os: macos-latest
+            platform: darwin
+            target: node18-macos-arm64
+            binary_name: capiscio-darwin-arm64
+            
           - os: windows-latest
             platform: win32
             target: node18-win-x64
             binary_name: capiscio-win-x64.exe
+            
+          - os: windows-latest
+            platform: win32
+            target: node18-win-arm64
+            binary_name: capiscio-win-arm64.exe
 
     steps:
       - name: Checkout repository
@@ -70,6 +80,11 @@ jobs:
           npx pkg dist/cli-bundled.js \
             --targets ${{ matrix.target }} \
             --output dist/binaries/${{ matrix.binary_name }}
+
+      - name: Sign macOS binary (ad-hoc)
+        if: runner.os == 'macOS'
+        run: |
+          codesign --sign - --force --deep dist/binaries/${{ matrix.binary_name }}
 
       - name: Test binary (Unix)
         if: runner.os != 'Windows'
