--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,19 @@ name: CI
 
 on:
   push:
-    branches: [ main, master, develop, feature/* ]
+    branches: [ main, master ]
+    paths-ignore: 
+      - '**.md'
+      - 'docs/**'
+      - '.gitignore'
+      - 'LICENSE'
   pull_request:
     branches: [ main, master ]
+    paths-ignore: 
+      - '**.md' 
+      - 'docs/**'
+      - '.gitignore'
+      - 'LICENSE'
 
 jobs:
   test:
@@ -77,6 +87,8 @@ jobs:
   test-binary-build:
     runs-on: ubuntu-latest
     needs: test
+    # Only test binary building on main/master pushes and PRs
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && contains(github.ref, 'refs/heads/main'))
     
     steps:
     - name: Checkout code
