feat: add Python pip package distribution with cross-platform binaries
- Add complete Python package structure with pyproject.toml
- Create Python CLI wrapper that auto-detects platform and runs appropriate binary
- Include all 5 platform binaries (Linux/macOS/Windows  x64/ARM64) in package
- Add GitHub Actions workflow for automated PyPI publishing on releases
- Configure PyPI trusted publishing for secure, tokenless deployment
- Add npm script 'build:python' for local testing and development
- Update README with pip installation option alongside npm and direct download
- Add comprehensive documentation for PyPI publishing setup
- Users can now install via: pip install capiscio
- Maintains feature parity with npm package while requiring no Node.js runtime

Files added:
- python-package/ - Complete Python package structure
- .github/workflows/publish-python.yml - CI/CD for PyPI publishing
- scripts/build-python-package.js - Build script with binary integration
- PYTHON_PUBLISHING.md - Setup and troubleshooting guide

Files modified:
- package.json - Added build:python script
- README.md - Added pip installation instructions
- .gitignore - Added Python package build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,12 @@ Desktop.ini
 
 # Linux
 *~
+
+# Python package artifacts
+python-package/dist/
+python-package/build/
+python-package/*.egg-info/
+python-package/__pycache__/
+python-package/.pytest_cache/
+*.py[cod]
+*$py.class
