--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capiscio-cli",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "The definitive CLI tool for validating A2A (Agent-to-Agent) protocol agent cards",
   "keywords": [
     "a2a",
@@ -58,6 +58,7 @@
     "commander": "^11.1.0",
     "glob": "^10.3.10",
     "inquirer": "^9.2.12",
+    "jose": "^6.1.0",
     "ora": "^5.4.1"
   },
   "devDependencies": {
