fix: prepare v1.2.1 patch release with corrected workflows and documentation
- Bump version to 1.2.1 across all package files
- Fix README binary download links to use correct .tar.gz format for macOS/Linux
- Fix GitHub Actions workflow trigger from 'published' to 'created' to allow asset uploads
- Fix Python workflow Windows shell syntax errors (remove backslash line continuations)
- Update installation commands with proper tar extraction steps
- Update CI/CD examples with correct binary format

This patch release fixes the v1.2.0 release issues:
- Immutable release preventing binary uploads
- Incorrect binary download links in documentation
- Windows PowerShell syntax errors in Python workflow

--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -67,21 +67,14 @@ jobs:
 
       - name: Bundle CLI with esbuild
         run: |
-          npx esbuild src/cli.ts \
-            --bundle \
-            --platform=node \
-            --target=node18 \
-            --outfile=dist/cli-bundled.js \
-            --banner:js="#!/usr/bin/env node"
+          npx esbuild src/cli.ts --bundle --platform=node --target=node18 --outfile=dist/cli-bundled.js --banner:js="#!/usr/bin/env node"
 
       - name: Create binary directory
         run: mkdir -p dist/binaries
 
       - name: Create binary with pkg
         run: |
-          npx pkg dist/cli-bundled.js \
-            --targets ${{ matrix.target }} \
-            --output dist/binaries/${{ matrix.binary_name }}
+          npx pkg dist/cli-bundled.js --targets ${{ matrix.target }} --output dist/binaries/${{ matrix.binary_name }}
 
       - name: Sign macOS binary (ad-hoc)
         if: runner.os == 'macOS'
