fix: v1.2.2 release with automated workflow dependency chain
Core Fixes:
- Fix immutable release issues with softprops/action-gh-release@v2
- Remove Windows ARM64 from Python package (pkg build issues)
- Implement safe automated dependency chain: binaries  npm  PyPI
- Eliminate manual release steps while maintaining safety

Workflow Improvements:
- Binary workflow: Fixed asset upload to handle immutable releases
- NPM workflow: Waits for successful binary completion before publishing
- Python workflow: Waits for successful NPM completion before publishing
- Automatic failure propagation stops unsafe publishes

Version Management:
- Bump all packages to 1.2.2 for clean release
- CLI dynamic version import working correctly
- Consistent version across npm, PyPI, and binaries

Release Process:
- Single-step: Just publish GitHub release
- Automatic chain ensures safe execution order
- No pre-release requirement, no manual steps
- Professional automated deployment pipeline

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -2,13 +2,13 @@ name: Build and Release Binaries
 
 on:
   release:
-    types: [created]  # Triggers when release is created (still allows asset uploads)
+    types: [created, published]  # Handle both draft creation and publishing
   workflow_dispatch:
     inputs:
       release_tag:
-        description: 'Release tag to build binaries for (e.g., v1.2.1)'
+        description: 'Release tag to build binaries for (e.g., v1.2.2)'
         required: true
-        default: 'v1.2.1'
+        default: 'v1.2.2'
 
 # Explicit permissions for security
 permissions:
@@ -115,14 +115,13 @@ jobs:
 
       - name: Upload binary to release (on release)
         if: github.event_name == 'release'
-        uses: actions/upload-release-asset@v1
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/binaries/${{ matrix.binary_name }}${{ (matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest') && '.tar.gz' || '' }}
+          tag_name: ${{ github.event.release.tag_name }}
+          fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: dist/binaries/${{ matrix.binary_name }}${{ (matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest') && '.tar.gz' || '' }}
-          asset_name: ${{ matrix.binary_name }}${{ (matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest') && '.tar.gz' || '' }}
-          asset_content_type: ${{ (matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest') && 'application/gzip' || 'application/octet-stream' }}
 
       - name: Upload binary artifact (on manual trigger)
         if: github.event_name == 'workflow_dispatch'
