--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -2,9 +2,13 @@ name: Build and Publish Python Package
 
 on:
   release:
-    types: [published]
+    types: [published]  # Trigger after npm workflow completes
   workflow_dispatch:
     inputs:
+      release_tag:
+        description: 'Release tag to publish to PyPI (e.g., v1.2.1)'
+        required: true
+        type: string
       dry_run:
         description: 'Run in dry-run mode (build only, no publish)'
         required: false
@@ -17,6 +21,26 @@ permissions:
   id-token: write  # For PyPI trusted publishing
 
 jobs:
+  # Wait for npm workflow to complete successfully  
+  wait-for-npm:
+    name: Wait for NPM Publish
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release'
+    steps:
+      - name: Wait for npm workflow
+        uses: fountainhead/action-wait-for-check@v1.2.0
+        id: wait-for-npm
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: "Publish to NPM"  # Wait for npm workflow
+          ref: ${{ github.event.release.tag_name }}
+          timeoutSeconds: 900  # 15 minutes max wait
+
+      - name: Check npm workflow result  
+        if: steps.wait-for-npm.outputs.conclusion != 'success'
+        run: |
+          echo "❌ NPM workflow failed or timed out. Cannot publish to PyPI."
+          exit 1
   # First, we need to build all the binaries that will be included in the Python package
   build-binaries:
     name: Build ${{ matrix.platform }} Binary
@@ -44,10 +68,8 @@ jobs:
             target: node18-win-x64
             binary_name: capiscio-win-x64.exe
             
-          - os: windows-latest
-            platform: win32
-            target: node18-win-arm64
-            binary_name: capiscio-win-arm64.exe
+          # Note: Windows ARM64 excluded from Python package due to pkg build issues
+          # Full ARM64 support available in direct binary downloads
 
     steps:
       - name: Checkout repository
@@ -103,7 +125,7 @@ jobs:
   # Build and publish the Python package
   build-python:
     name: Build Python Package
-    needs: build-binaries
+    needs: [build-binaries, wait-for-npm]
     runs-on: ubuntu-latest
     
     steps:
@@ -155,12 +177,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: capiscio-win-x64.exe
-          path: python-package/capiscio/binaries/
-
-      - name: Download Windows ARM64 binary
-        uses: actions/download-artifact@v4
-        with:
-          name: capiscio-win-arm64.exe
           path: python-package/capiscio/binaries/
 
       - name: Make Unix binaries executable
@@ -222,7 +238,7 @@ jobs:
     name: Publish to PyPI
     needs: build-python
     runs-on: ubuntu-latest
-    # Only run on actual releases, not manual dispatches with dry_run
+    # Only run when not in dry-run mode  
     if: github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && !inputs.dry_run)
     
     steps:
