--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,12 +2,39 @@ name: Release
 
 on:
   release:
-    types: [published]
-  # Also support manual workflow dispatch for emergency releases
+    types: [published]  # Trigger when release is published (not pre-release)
   workflow_dispatch:
+    inputs:
+      release_tag:
+        description: 'Release tag to publish to npm (e.g., v1.2.1)'
+        required: true
+        type: string
 
 jobs:
+  # Wait for binary workflow to complete successfully
+  wait-for-binaries:
+    name: Wait for Binary Build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release'
+    steps:
+      - name: Wait for binary workflow
+        uses: fountainhead/action-wait-for-check@v1.2.0
+        id: wait-for-binaries
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          checkName: "Build linux Binary"  # This will check if binary workflow completed
+          ref: ${{ github.event.release.tag_name }}
+          timeoutSeconds: 1800  # 30 minutes max wait
+
+      - name: Check binary workflow result
+        if: steps.wait-for-binaries.outputs.conclusion != 'success'
+        run: |
+          echo "❌ Binary workflow failed or timed out. Cannot publish to npm."
+          exit 1
+
   publish:
+    name: Publish to NPM
+    needs: wait-for-binaries
     runs-on: ubuntu-latest
     permissions:
       contents: read
