--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -1,14 +1,15 @@
 name: Build and Release Binaries
 
 on:
-  release:
-    types: [created]  # Only trigger on draft creation - uploads assets before release becomes immutable
+  push:
+    tags:
+      - 'v*'  # Trigger on any version tag push (v1.2.3, v2.0.0, etc.)
   workflow_dispatch:
     inputs:
       release_tag:
-        description: 'Release tag to build binaries for (e.g., v1.2.1)'
+        description: 'Release tag to build binaries for (e.g., v0.0.1)'
         required: true
-        default: 'v1.2.1'
+        default: 'v0.0.1'
 
 # Explicit permissions for security
 permissions:
@@ -113,12 +114,12 @@ jobs:
           # Remove the original binary since we now have the tarball
           rm ${{ matrix.binary_name }}
 
-      - name: Upload binary to draft release
-        if: github.event_name == 'release'
+      - name: Upload binary to release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           files: dist/binaries/${{ matrix.binary_name }}${{ (matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest') && '.tar.gz' || '' }}
-          tag_name: ${{ github.event.release.tag_name }}
+          tag_name: ${{ github.ref_name }}
           fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
