--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -65,22 +65,13 @@ jobs:
         run: npm run build
 
       - name: Bundle CLI with esbuild
-        run: |
-          npx esbuild src/cli.ts \
-            --bundle \
-            --platform=node \
-            --target=node18 \
-            --outfile=dist/cli-bundled.js \
-            --banner:js="#!/usr/bin/env node"
+        run: npx esbuild src/cli.ts --bundle --platform=node --target=node18 --outfile=dist/cli-bundled.js --banner:js="#!/usr/bin/env node"
 
       - name: Create binary directory
         run: mkdir -p dist/binaries
 
       - name: Create binary with pkg
-        run: |
-          npx pkg dist/cli-bundled.js \
-            --targets ${{ matrix.target }} \
-            --output dist/binaries/${{ matrix.binary_name }}
+        run: npx pkg dist/cli-bundled.js --targets ${{ matrix.target }} --output dist/binaries/${{ matrix.binary_name }}
 
       - name: Sign macOS binary (ad-hoc)
         if: runner.os == 'macOS'
