fix: create draft releases instead of published releases
- Add 'draft: true' to softprops/action-gh-release@v2
- Prevents immediate triggering of NPM/Python workflows
- Allows all binaries to upload before manual publish step
- Fixes premature workflow execution

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -111,6 +111,7 @@ jobs:
         with:
           files: dist/binaries/${{ matrix.binary_name }}${{ (matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest') && '.tar.gz' || '' }}
           tag_name: ${{ github.ref_name }}
+          draft: true
           fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
