Update branding consistency and add mkdocs.yml
- Standardize branding: Capiscio  CapiscIO across all documentation
- Add mkdocs.yml for standalone documentation builds
- Update .gitignore and package.json metadata
- Improve documentation structure for unified docs integration

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/capiscio/capiscio-cli/issues"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "author": "Capiscio Team",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
