chore: update branding from Capiscio to CapiscIO
- Update copyright in LICENSE
- Update author field in package.json
- Update Python package docstrings and metadata
- Consistent capitalization: CapiscIO (capital I and O)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/capiscio/capiscio-cli/issues"
   },
   "license": "Apache-2.0",
-  "author": "Capiscio Team",
+  "author": "CapiscIO Team",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
