chore: release v2.1.0 with core binary wrapper and Apache 2.0 license

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,9 @@ jobs:
       
     - name: Run tests
       run: npm test
+
+    - name: Run integration tests
+      run: npm run test:integration
       
     - name: Build CLI
       run: npm run build
