--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capiscio-cli",
+  "name": "capiscio",
   "version": "2.1.0",
   "description": "The definitive CLI tool for validating A2A (Agent-to-Agent) protocol agent cards",
   "keywords": [
