--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,31 +1,32 @@
-# CapiscIO CLI Documentation
-# Can be built standalone or included in unified docs
+# CapiscIO Node.js CLI Wrapper
 
-site_name: capiscio-cli
-site_url: https://docs.capisc.io/capiscio-cli
-site_description: Command-line validation tool for A2A protocol agent cards
+site_name: CapiscIO Node.js CLI
+site_url: https://docs.capisc.io/capiscio-node
+site_description: The official Node.js wrapper for the CapiscIO Core CLI.
 site_author: CapiscIO Team
+copyright: Copyright &copy; 2025 CapiscIO
 
-# Only used in standalone mode
-repo_name: capiscio/capiscio-cli
-repo_url: https://github.com/capiscio/capiscio-cli
+repo_name: capiscio/capiscio-node
+repo_url: https://github.com/capiscio/capiscio-node
 edit_uri: edit/main/docs/
 
 theme:
   name: material
+  logo: https://docs.capisc.io/assets/logo.png
+  favicon: https://docs.capisc.io/assets/favicon.ico
   palette:
-    - scheme: default
-      primary: blue grey
-      accent: cyan
-      toggle:
-        icon: material/brightness-7
-        name: Switch to dark mode
     - scheme: slate
       primary: blue grey
       accent: cyan
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+    - scheme: default
+      primary: blue grey
+      accent: cyan
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
   
   font:
     text: Roboto
@@ -34,10 +35,16 @@ theme:
   features:
     - navigation.instant
     - navigation.tracking
+    - navigation.tabs
+    - navigation.sections
+    - navigation.expand
     - navigation.top
+    - navigation.footer
+    - toc.follow
     - search.suggest
     - search.highlight
     - content.code.copy
+    - content.tabs.link
 
 plugins:
   - search:
@@ -48,35 +55,40 @@ markdown_extensions:
   - admonition
   - attr_list
   - def_list
+  - footnotes
   - md_in_html
   - tables
   - toc:
       permalink: true
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.details
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
-  - pymdownx.details
+  - pymdownx.tasklist:
+      custom_checkbox: true
 
-# Navigation for CLI docs
-nav:
-  - Overview: README.md
-  - Validation Process: validation-process.md
-  - Scoring System: scoring-system.md
-  - Architecture: architecture.md
-  - API Reference: api-reference.md
-
-# Extra configuration
 extra:
   homepage: https://docs.capisc.io
-  
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/capiscio/capiscio-cli
-    - icon: fontawesome/brands/npm
-      link: https://www.npmjs.com/package/capiscio-cli
+      link: https://github.com/capiscio
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/capiscio
+
+nav:
+  - Home: index.md
+  - Getting Started:
+      - Installation: getting-started/installation.md
+  - Guides:
+      - Programmatic Usage: guides/programmatic-usage.md
+      - Scoring: guides/scoring.md
+  - Reference:
+      - API Reference: reference/api.md
+      - Architecture: reference/architecture.md
